<resources>
    <string name="app_name">Of Sound Mind &amp; Body </string>
    <string name="short_description">Play calming sounds to sleep, concentrate, or relax</string>
    <string name="full_description">Play calming sounds to help you sleep, concentrate, or relax.
        this app allows you to mix and layer different sounds to create the perfect soundscape.</string>
    <string name="eleven_forest">Eleven Forest</string>
    <string name="green_nature">Green Nature</string>
    <string name="healing_water">Healing Water</string>
    <string name="the_quiet_morning">Quiet Morning</string>
    <string name="tranquility">Tranquility</string>
    <string name="deepmeditation">Deep Meditation</string>
    <string name="inthemoment">Moment</string>
    <string name="lovespell">Love Spell</string>
    <string name="friends">Friends</string>
    <string name="action_about">About</string>
    <string name="action_facebook">Visit Facebook Page</string>
    <string name="action_exit">Exit</string>
    <string name="notification_message">Of Sound Body and Mind is running…</string>
</resources>
