<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/nature"
    android:id="@+id/main_content"
    tools:showIn="@layout/activity_main">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_rain"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableStart="@drawable/ic_rain"
            android:padding="4dp"
            android:text="@string/eleven_forest"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/rain_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_storm"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableStart="@drawable/ic_storm"
            android:padding="4dp"
            android:text="@string/green_nature"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/storm_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_water"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fitsSystemWindows="true"
            android:drawableStart="@drawable/ic_water"
            android:padding="4dp"
            android:text="@string/healing_water"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/water_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_fire"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_fire"
            android:padding="4dp"
            android:text="@string/the_quiet_morning"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/fire_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_wind"
            android:padding="4dp"
            android:text="@string/tranquility"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/wind_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_night"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_night"
            android:padding="4dp"
            android:text="@string/friends"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/night_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_deep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_moon"
            android:padding="4dp"
            android:text="@string/deepmeditation"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/deep_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_moment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_volume"
            android:padding="4dp"
            android:text="@string/inthemoment"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/moment_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_heart"
            android:padding="4dp"
            android:text="@string/lovespell"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/love_volume"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            android:max="19"
            android:progress="19"
            android:visibility="invisible"/>
    </GridLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_stop"
        android:visibility="invisible"
        app:layout_anchorGravity="bottom|right|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>